--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <br>
          <h1>Do you support ukraine?</h1>
          <br>
-         <a class="btn btn-warning" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course</a>
+         <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course</a>
          <br>
          <br>
-         <a class="btn btn-warning" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course no</a>
+         <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course no</a>
      </center>
  </body>
  </html>
