--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="bootstrap.min.css">
      <title>Poll</title>
+<style>
+body{
+background-color: grey;
+}
+</style>
  </head>
  <body>
      <center>
