--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ font-size: 30px;
          <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course</a>
          <br>
          <br>
-         <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course no</a>
+         <a class="btn btn-info" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course no</a>
      </center>
  </body>
  </html>
