--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <title>Poll</title>
 <style>
 body{
-background-color: grey;
+background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Football_iu_1996.jpg/1200px-Football_iu_1996.jpg");
 }
 html{
 font-size: 30px;
