--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ font-size: 30px;
 <br>
 <br>
 <br>
-         <h1>Do you support ukraine?</h1>
+         <h1>Do you support ukrainian national football team?</h1>
          <br>
          <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course</a>
          <br>
