--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9
 }
 html{
 font-size: 30px;
+font-color: white;
 }
 </style>
  </head>
