--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="bootstrap.min.css">
-     <title>Poll</title>
-<style>
+     <title>Poll</title>;
 body{
-background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Football_iu_1996.jpg/1200px-Football_iu_1996.jpg");
+background-color: grey;
 }
 html{
 font-size: 30px;
