--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="bootstrap.min.css">
-     <title>Poll</title>;
+     <title>Poll</title>
+<style>
 body{
 background-color: grey;
 }
