--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ font-color: white;
 <br>
 <br>
 <br>
-         <h1>Do you support ukrainian national football team?</h1>
+         <h1>What do you put first milk or cereal?</h1>
          <br>
-         <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course</a>
+         <a class="btn btn-primary" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Milk</a>
          <br>
          <br>
-         <a class="btn btn-info" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Of course no</a>
+         <a class="btn btn-info" onclick="window.location.href='https://youtu.be/dQw4w9WgXcQ'">Cereal</a>
      </center>
  </body>
  </html>
