--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ font-color: white;
 <br>
          <h1>What do you put first milk or cereal?</h1>
          <br>
-         <a class="btn btn-primary" onclick="reveal();alert('Ok')">Milk</a>
+         <a class="btn btn-primary" onclick="reveal();">Milk</a>
          <br>
          <br>
          <a class="btn btn-info" onclick="reveal()">Cereal</a>
